--- a/deploy.yml
+++ b/deploy.yml
@@ -71,8 +71,10 @@ rules:
   - apiGroups:
       - extensions
       - networking.k8s.io
+      - networking.istio.io
     resources:
       - ingresses
+      - gateways
     verbs:
       - get
       - list
